<resources>
    <string name="app_name">HNTrainning</string>
    <string name="contentTitle">Notifications Demo</string>
    <string name="contentText">This is a test notification</string>
    <string name="notify">notify</string>
    <string name="nguyen_van_hai">Nguyen Van Hai</string>
    <string name="log_out">Đăng xuất</string>
    <string name="todo">TODO</string>
    <string name="this_is_notification_demo">This is notification demo</string>
    <string name="notification">Notification</string>
    <string name="my_firebase_sevice">MyFirebaseService</string>
    <string name="notification_body">\"Message Notification Body: \"</string>
    <string name="channel_id">channelId</string>
    <string name="thong_bao">Thông báo</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="shopping">Mua sắm</string>
    <string name="gift">Quà của tôi</string>
    <string name="test">alo</string>
    <string name="error_pass">Mât khẩu không đươc ngắn hơn 6 và dài hơn 20, không chứa dấu cách</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="phone">Số điện thoại</string>
    <string name="agree">Tôi đồng ý với các</string>
    <string name="term">Điều khoản và chính sách sử dụng</string>
    <string name="register">Đăng kí</string>
    <string name="error_pass_user">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="Remember">Nhớ mật khẩu</string>
    <string name="log_in">Đăng nhập</string>
    <string name="register_now">Đăng kí ngay?</string>
    <string name="wallet">Ví gia đình</string>
    <string name="banking">Chuyển tiền</string>
    <string name="qr">QR của tôi</string>
    <string name="nap_tien_phone">Nạp tiền điện thoại</string>
    <string name="booking_fly">Đặt vé máy bay</string>
    <string name="vn_shop">VnShop</string>
    <string name="mua_ma_the">Mua mã thẻ</string>
    <string name="taxi">Gọi Taxi</string>
    <string name="watch_film">Vé xem phim</string>
    <string name="moving">Giao hàng</string>
    <string name="tien_dien">Tiền điện</string>
    <string name="booking_hotel">Đặt phòng khách sạn</string>
    <string name="sport">Thể thao - Giải trí</string>
    <string name="voucher_today">Voucher Dealtoday</string>
    <string name="thanh_toan">Thanh toán hóa đơn</string>
    <string name="booking_train">Đặt vé tàu</string>
    <string name="booking_bike">Đặt vé xe</string>
    <string name="open_banking">Mở tài khoản ngân hàng</string>
    <string name="student">Hội viên Bông Sen Vàng</string>
    <string name="nap_tien">Nạp tiền vào ví</string>
    <string name="my_qr">QR của tôi</string>
    <string name="cl">Chuyển tiền</string>
    <string name="vi">Ví gia đình</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>