<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="50dp"
        >
        <TextView
            android:id="@+id/tv_tb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:textColor="@color/error"
            android:layout_marginRight="40dp"
            android:visibility="invisible"
            android:text="@string/error_pass"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">
            <EditText
                android:id="@+id/edt_use_name"
                android:layout_marginTop="19dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botron"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:lines="1"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="15sp"
                android:background="@color/white"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="15dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            >

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="19dp"
                android:background="@drawable/botron"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="20dp"
                android:textSize="18sp" />
            <TextView

                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mật khẩu"
                android:textSize="15sp"
                android:background="@color/white"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="15dp"
                />
            <ImageView
                android:padding="3dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_lock_24"
                android:layout_alignParentRight="true"
                android:layout_marginTop="25sp"
                android:layout_marginRight="7dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="19dp"
                android:background="@drawable/botron"
                android:gravity="center_vertical"
                android:lines="1"
                android:paddingLeft="20dp"
                android:textSize="18sp"
                android:inputType="phone"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="15sp"
                android:background="@color/white"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="15dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            >

            <CheckBox
                android:id="@+id/cb_grand"
                android:layout_width="50dp"
                android:checked="true"
                android:layout_height="40dp"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:text="@string/agree"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="148dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="19dp"
                android:background="@color/white"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/term"
                android:textColor="#124875"
                android:textSize="12sp"
                android:textStyle="italic" />
        </RelativeLayout>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="50dp"
            android:textSize="15sp"
            android:text="@string/register"
            android:background="@drawable/botron"
            />
    </LinearLayout>
</LinearLayout>
